--- a/public/cv/style.css
+++ b/public/cv/style.css
@@ -33,3 +33,17 @@ body {
 .download-button:hover {
     background-color: #0056B3;
 }
+
+.source-code-link {
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+.source-code-link a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.source-code-link a:hover {
+    text-decoration: underline;
+}
